# apex

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.toml  pyproject.toml
.github/workflows/: docker.yml
docker/: entrypoint.sh  refresh_config.py
docs/: ARCHITECTURE.md  DAY1_PLAN.md  SIMPLE_GUIDE.md  STARTUP_CHECKLIST.md
src/peaks/: __init__.py  cache.py  cli.py  config.py  embedding.py  failures.py  labeler.py  models.py  pipeline.py  playlist.py  sampling.py  scoring.py  search.py  stash_client.py  vocab.py
src/peaks/web/: __init__.py  app.py  jobs.py  service.py
src/peaks/web/static/: app.js  index.html  style.css
tests/: test_cache.py  test_embedding.py  test_failures.py  test_fix_service.py  test_optimizations.py  test_pipeline.py  test_raw_pipeline.py  test_refresh_config.py  test_sampling.py  test_score_playlist.py  test_scoring.py  test_search.py  test_sparse_mode.py  test_stash_client.py  test_tier2_pipeline.py  test_web_api.py
unraid/: peaks.xml
webapp/: megaboard.css  megaboard.js
